# calibre-server

./: Cargo.toml  README.md  calibre-server.service  nginx-calibre.conf
src/: main.rs
src/config/: mod.rs
src/db/: mod.rs  models.rs
src/epub/: mod.rs
src/html/: mod.rs
src/opds/: mod.rs
templates/: base.html  books.html  categories.html  index.html
